solved bug with menu not working on mobile resolution

--- a/src/modules/components/headers-and-footers/header/header.scss
+++ b/src/modules/components/headers-and-footers/header/header.scss
@@ -3,6 +3,12 @@
   position: relative;
   z-index: 10000;
 
+  .header-proposition {
+    a.menu.open:after {
+      content: " \25b2" !important;
+    }
+  }  
+
   .header-wrapper {
     box-sizing: content-box;
     &.business {
